--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Generate code coverage report
         uses: actions-rs/tarpaulin@v0.1
+        with:
+          args: "--features cookies,psl"
 
       - uses: codecov/codecov-action@v1
         with:
