--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           toolchain: "1.45.0"
           default: true
 
-      - run: cargo test --features cookies,psl,spnego
+      - run: cargo test --features cookies,psl,spnego,unstable-interceptors
 
       - run: cargo run --release --example simple
 
