--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@ rayon = "1"
 speculate = "0.1"
 static_assertions = "1.1"
 structopt = "0.3"
+tempfile = "3.1"
 tracing-subscriber = "0.2"
 
 [[example]]
