Add title_case_headers option
This required a custom HTTP mocker because no existing HTTP mocking library, including Mockito, don't allow you to access the literal header characters received since the HTTP spec says header keys are case-insensitive. This mocker will be tweaked and improved in a follow-up PR as there is also another set of tests that also need it.

Related to #205.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,9 +99,12 @@ structopt = "0.3"
 tempfile = "3.1"
 tracing-subscriber = "0.2"
 
+[dev-dependencies.isahc-test-util]
+path = "test-util"
+
 [[example]]
 name = "json"
 required-features = ["json", "serde/derive"]
 
 [workspace]
-members = ["benchmarks"]
+members = ["benchmarks", "test-util"]
