--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,18 +93,18 @@ futures = "0.3"
 indicatif = "0.15"
 mockito = "0.27"
 rayon = "1"
-speculate = "0.1"
 static_assertions = "1.1"
 structopt = "0.3"
 tempfile = "3.1"
+test-case = "1.0"
 tracing-subscriber = "0.2"
 
-[dev-dependencies.isahc-test-util]
-path = "test-util"
+[dev-dependencies.testutil]
+path = "testutil"
 
 [[example]]
 name = "json"
 required-features = ["json", "serde/derive"]
 
 [workspace]
-members = ["benchmarks", "test-util"]
+members = ["benchmarks", "testutil"]
