--- a/testutil/Cargo.toml
+++ b/testutil/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "isahc-test-util"
+name = "testutil"
 version = "0.0.0"
 description = "Helper crate for Isahc tests."
 edition = "2018"
@@ -7,4 +7,8 @@ publish = false
 
 [dependencies]
 crossbeam-channel = "0.4"
+ctor = "0.1"
+env_logger = "0.7"
+lazy_static = "1"
 tiny_http = "0.7"
+tracing-subscriber = "0.2"
