--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,12 +99,12 @@ tempfile = "3.1"
 test-case = "1.0"
 tracing-subscriber = "0.2"
 
-[dev-dependencies.testutil]
-path = "testutil"
+[dev-dependencies.testserver]
+path = "testserver"
 
 [[example]]
 name = "json"
 required-features = ["json", "serde/derive"]
 
 [workspace]
-members = ["benchmarks", "testutil"]
+members = ["benchmarks", "testserver"]
