add static-ssl feature to mirror curl/static-ssl

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ json = ["serde", "serde_json"]
 psl = ["parking_lot", "publicsuffix"]
 spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
+static-ssl = ["curl/static-ssl"]
 text-decoding = ["encoding_rs", "mime"]
 middleware-api-preview = []
 
