--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
       - run: |
           sudo apt update
-          sudo apt install libkrb5-dev
+          sudo apt install -y libkrb5-dev
         if: matrix.os == 'ubuntu-latest'
 
       - uses: actions-rs/toolchain@v1
