--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,6 +97,7 @@ rayon = "1"
 static_assertions = "1.1"
 structopt = "0.3"
 tempfile = "3.1"
+test-case = "1.0"
 tracing-subscriber = "0.2"
 
 [dev-dependencies.isahc-test-util]
