--- a/.github/workflows/configure-repo.yml
+++ b/.github/workflows/configure-repo.yml
@@ -10,3 +10,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: micnncim/action-label-syncer@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
