Update integration tests to use new testserver (#230)
Update all integration tests to use the new testserver implementation, adding a few features to testserver as required. This cuts our total test runtime nearly in half because of parallelization!

Also extract the SOCKS4 proxy implementation out of the test into its own type to keep things clean and to improve the SOCKS4 server reliability on Windows.

Also update Tarpaulin since it has a hard time running the SOCKS4 proxy test.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,15 +39,20 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
         with:
           submodules: true
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          default: true
 
       - name: Generate code coverage report
         uses: actions-rs/tarpaulin@v0.1
         with:
-          version: '0.13.3'
-          args: "--run-types Doctests Tests --features cookies,psl"
+          args: "-p isahc --run-types Doctests Tests --features cookies,psl"
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
