--- a/Cargo.toml
+++ b/Cargo.toml
@@ -102,9 +102,12 @@ tracing-subscriber = "0.2"
 [dev-dependencies.testserver]
 path = "testserver"
 
+[dev-dependencies.testutil]
+path = "testutil"
+
 [[example]]
 name = "json"
 required-features = ["json", "serde/derive"]
 
 [workspace]
-members = ["benchmarks", "testserver"]
+members = ["benchmarks", "testserver", "testutil"]
