--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,8 +39,8 @@ curl-sys = "0.4.37"
 futures-channel = "0.3"
 futures-io = "0.3"
 http = "0.2.1"
-lazy_static = "1"
 log = "0.4"
+once_cell = "1"
 slab = "0.4"
 sluice = "0.5"
 
