--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -18,7 +18,7 @@ jobs:
           toolchain: "nightly"
           default: true
 
-      - run: cargo doc --no-deps
+      - run: cargo doc --no-deps --features cookies,json
 
       - uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
