--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,17 +32,16 @@ unstable-interceptors = []
 
 [dependencies]
 bytes = "0.5"
-crossbeam-channel = "0.5"
 crossbeam-utils = "0.8"
 curl = "0.4.34"
 curl-sys = "0.4.37"
-futures-channel = "0.3"
-futures-io = "0.3"
+futures-lite = "1.11"
 http = "0.2.1"
 log = "0.4"
 once_cell = "1"
 slab = "0.4"
 sluice = "0.5"
+waker-fn = "1"
 
 [dependencies.chrono]
 version = "0.4"
@@ -52,10 +51,10 @@ optional = true
 version = "0.8"
 optional = true
 
-[dependencies.futures-util]
-version = "0.3"
+[dependencies.flume]
+version = "0.9"
 default-features = false
-features = ["io"]
+features = ["async"]
 
 [dependencies.mime]
 version = "0.3"
