Add wait methods

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ bytes = "0.5"
 crossbeam-utils = "0.8"
 curl = "0.4.34"
 curl-sys = "0.4.37"
+event-listener = "2.5"
 futures-lite = "1.11"
 http = "0.2.1"
 log = "0.4"
