--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@ structopt = "0.3"
 tempfile = "3.1"
 test-case = "1.0"
 tracing-subscriber = "=0.2.12"
+serde_json = "1"
 
 [dev-dependencies.testserver]
 path = "testserver"
