Ensure rustfmt is installed

--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly
+          components: rustfmt
           default: true
 
       - run: cargo fmt
