Make sure clippy is installed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly
+          components: clippy
           default: true
 
       - name: Check Clippy lints
