upgrade publicsuffix to v2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,8 +66,8 @@ version = "0.11"
 optional = true
 
 [dependencies.publicsuffix]
-version = ">=1.5.0, <1.5.5"
-default-features = false
+version = "2.0.6"
+features = ["std"]
 optional = true
 
 [dependencies.serde]
