--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "isahc"
-version = "1.3.0"
+version = "1.3.1"
 description = "The practical HTTP client that is fun to use."
 authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
 license = "MIT"
@@ -33,7 +33,7 @@ unstable-interceptors = []
 [dependencies]
 async-channel = "1.6"
 crossbeam-utils = "0.8"
-curl = "0.4.34"
+curl = ">=0.4.34, <=0.4.35"
 curl-sys = "0.4.37"
 futures-lite = "1.11"
 http = "0.2.1"
