--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,8 @@ unstable-interceptors = []
 [dependencies]
 async-channel = "1.6"
 crossbeam-utils = "0.8"
-curl = ">=0.4.34, <=0.4.35"
-curl-sys = "0.4.37"
+curl = "0.4.36"
+curl-sys = "0.4.42"
 futures-lite = "1.11"
 http = "0.2.1"
 log = "0.4"
