--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,7 +92,7 @@ static_assertions = "1.1"
 structopt = "0.3"
 tempfile = "3.1"
 test-case = "1.1"
-tracing-subscriber = "=0.2.12"
+tracing-subscriber = "0.2.12"
 serde_json = "1"
 
 [dev-dependencies.testserver]
