--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,11 @@ features = ["cookies", "json"]
 status = "actively-developed"
 
 [features]
-default = ["http2", "static-curl", "text-decoding"]
+default = ["http2", "multipart", "static-curl", "text-decoding"]
 cookies = ["chrono"]
 http2 = ["curl/http2"]
 json = ["serde", "serde_json"]
+multipart = ["fastrand"]
 psl = ["parking_lot", "publicsuffix"]
 spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
@@ -52,6 +53,10 @@ optional = true
 
 [dependencies.encoding_rs]
 version = "0.8"
+optional = true
+
+[dependencies.fastrand]
+version = "1"
 optional = true
 
 [dependencies.mime]
