Replace type macros with castaway

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ unstable-interceptors = []
 
 [dependencies]
 async-channel = "1.6"
+castaway = "0.1"
 crossbeam-utils = "0.8"
 curl = "0.4.36"
 curl-sys = "0.4.42"
