--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,8 +64,8 @@ jobs:
       - name: Generate code coverage report
         uses: actions-rs/tarpaulin@v0.1
         with:
-          version: '0.16.0'
-          args: "-p isahc --run-types Doctests Tests --features ${{ env.FEATURES }}"
+          version: '0.18.2'
+          args: "-p isahc --run-types Tests --features ${{ env.FEATURES }}"
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
