--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,20 +25,40 @@ jobs:
         with:
           submodules: true
 
-      - run: |
+      - name: Install system dependencies
+        run: |
           sudo apt update
           sudo apt install -y libkrb5-dev
         if: matrix.os == 'ubuntu-latest'
 
-      - uses: actions-rs/toolchain@v1
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: "1.46.0"
           default: true
 
-      - run: cargo test --features ${{ env.FEATURES }},spnego,unstable-interceptors
+      - name: Update Cargo.lock
+        run: cargo update
 
-      - run: cargo run --release --example simple
+      - name: Cache Cargo dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: cargo-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            cargo-${{ runner.os }}-
+
+      - name: Run tests
+        run: cargo test --features ${{ env.FEATURES }},spnego,unstable-interceptors
+
+      - name: Run example program
+        run: cargo run --release --example simple
 
   analyze:
     runs-on: ubuntu-latest
@@ -54,6 +74,22 @@ jobs:
           toolchain: nightly
           components: clippy
           default: true
+
+      - name: Update Cargo.lock
+        run: cargo update
+
+      - name: Cache Cargo dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: cargo-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            cargo-${{ runner.os }}-
 
       - name: Check Clippy lints
         uses: actions-rs/clippy-check@v1
