--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,14 +29,15 @@ spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
 static-ssl = ["curl/static-ssl"]
 text-decoding = ["encoding_rs", "mime"]
+unstable-rustls-tls = ["curl/rustls"]
 unstable-interceptors = []
 
 [dependencies]
 async-channel = "1.6"
 castaway = "0.1"
 crossbeam-utils = "0.8"
-curl = "0.4.36"
-curl-sys = "0.4.42"
+curl = "0.4.42"
+curl-sys = "0.4.52"
 event-listener = "2.5"
 futures-lite = "1.11"
 http = "0.2.1"
