--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,8 @@ unstable-interceptors = []
 
 [dependencies]
 async-channel = "1.6"
-castaway = "0.1"
-crossbeam-utils = "0.8"
+castaway = "0.1.1"
+crossbeam-utils = ">=0.7.0, <0.9.0"
 curl = "0.4.42"
 curl-sys = "0.4.52"
 event-listener = "2.5"
@@ -89,7 +89,7 @@ features = ["std", "std-future"]
 
 [dev-dependencies]
 env_logger = "0.9"
-flate2 = "1.0"
+flate2 = "1.0.3"
 indicatif = "0.15"
 rayon = "1"
 static_assertions = "1.1"
