--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,15 @@ jobs:
           components: clippy
           default: true
 
+      # openssl-sys <0.9.45 relies on a feature in rustc_version >=0.2.2, but
+      # specifies its dependency as "^0.2".
+      - name: Override openssl-sys version
+        uses: ciiiii/toml-editor@1.0.0
+        with:
+          file: Cargo.toml
+          key: "dependencies.openssl-sys.version"
+          value: "0.9.45"
+
       - name: Update Cargo.lock
         run: cargo -Z minimal-versions update
 
