--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,46 @@ jobs:
       - name: Run example program
         run: cargo run --release --example simple
 
+  test-minimal-versions:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          components: clippy
+          default: true
+
+      # openssl-sys <0.9.45 relies on a feature in rustc_version >=0.2.2, but
+      # specifies its dependency as "^0.2".
+      - name: Override openssl-sys version
+        run: |
+          printf '[dependencies.openssl-sys]\nversion = "0.9.45"\n' >> Cargo.toml
+
+      - name: Update Cargo.lock
+        run: cargo -Z minimal-versions update
+
+      - name: Cache Cargo dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: cargo-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            cargo-${{ runner.os }}-
+
+      - name: Run tests
+        run: cargo test --features ${{ env.FEATURES }}
+
   analyze:
     runs-on: ubuntu-latest
     timeout-minutes: 20
