--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,20 +33,20 @@ unstable-rustls-tls = ["curl/rustls"]
 unstable-interceptors = []
 
 [dependencies]
-async-channel = "1.6"
-castaway = "0.1"
-crossbeam-utils = "0.8"
+async-channel = "1.4.2"
+castaway = "0.1.1"
+crossbeam-utils = ">=0.7.0, <0.9.0"
 curl = "0.4.42"
 curl-sys = "0.4.52"
-event-listener = "2.5"
-futures-lite = "1.11"
+event-listener = "2.3.3"
+futures-lite = "1.10.1"
 http = "0.2.1"
 log = "0.4"
 once_cell = "1"
-polling = "2.0"
+polling = "2"
 slab = "0.4"
 sluice = "0.5.4"
-url = "2.2"
+url = "2.1"
 waker-fn = "1"
 
 [dependencies.encoding_rs]
@@ -62,7 +62,7 @@ version = "0.3"
 optional = true
 
 [dependencies.parking_lot]
-version = "0.11"
+version = ">=0.9.0, <0.12.0"
 optional = true
 
 [dependencies.publicsuffix]
@@ -89,7 +89,7 @@ features = ["std", "std-future"]
 
 [dev-dependencies]
 env_logger = "0.9"
-flate2 = "1.0"
+flate2 = "1.0.3"
 indicatif = "0.15"
 rayon = "1"
 static_assertions = "1.1"
