Make tracing dependencies optional

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
 static-ssl = ["curl/static-ssl"]
 text-decoding = ["encoding_rs", "mime"]
+tracing-01 = ["tracing", "tracing-futures"]
 unstable-rustls-tls = ["curl/rustls"]
 unstable-interceptors = []
 
@@ -80,12 +81,14 @@ optional = true
 
 [dependencies.tracing]
 version = "0.1.17"
-features = ["log"]
+default-features = false
+optional = true
 
 [dependencies.tracing-futures]
 version = "0.2"
 default-features = false
 features = ["std", "std-future"]
+optional = true
 
 [dev-dependencies]
 env_logger = "0.9"
