Update feature flag names

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,13 +26,13 @@ json = ["serde", "serde_json"]
 native-tls = ["curl/ssl", "curl-sys/ssl"]
 nightly = []
 psl = ["httpdate", "parking_lot", "publicsuffix"]
+rustls-tls = ["rustls-ffi", "curl/rustls", "curl/static-curl"]
+rustls-tls-native-certs = ["rustls-tls", "data-encoding", "rustls-native-certs"]
 spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
 static-ssl = ["curl/static-ssl"]
 text-decoding = ["encoding_rs", "mime"]
 unstable-interceptors = []
-unstable-rustls-tls = ["rustls-ffi", "curl/rustls", "curl/static-curl"]
-unstable-rustls-tls-native-certs = ["unstable-rustls-tls", "data-encoding", "rustls-native-certs"]
 
 [dependencies]
 async-channel = "1.4.2"
