--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           - windows-latest
         features:
           - "http2,text-decoding,cookies,psl,unstable-interceptors,native-tls,static-curl"
-          - "http2,text-decoding,cookies,psl,unstable-interceptors,unstable-rustls-tls-native-certs"
+          - "http2,text-decoding,cookies,psl,unstable-interceptors,rustls-tls-native-certs"
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
     env:
