--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
           - ubuntu-latest
           - macos-latest
           - windows-latest
+        features:
+          - "http2,text-decoding,cookies,psl,unstable-interceptors,native-tls,static-curl"
+          - "http2,text-decoding,cookies,psl,unstable-interceptors,rustls-tls-native-certs"
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
     env:
@@ -35,7 +38,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: "1.46.0"
+          toolchain: "1.56"
           default: true
 
       - name: Update Cargo.lock
@@ -55,7 +58,7 @@ jobs:
             cargo-${{ runner.os }}-
 
       - name: Run tests
-        run: cargo test --features ${{ env.FEATURES }},spnego,unstable-interceptors
+        run: cargo test --no-default-features --features ${{ matrix.features }}
 
       - name: Run example program
         run: cargo run --release --example simple
