Refactor TLS API
Refactor the API for SSL/TLS configuration. This accounts for the fact that the TLS engine can vary (as rustls is now an option) and corrects some confusing parts of the API that don't always make sense.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ http2 = ["curl/http2"]
 json = ["serde", "serde_json"]
 native-tls = ["curl/ssl", "curl-sys/ssl"]
 nightly = []
+online-tests = []
 psl = ["httpdate", "parking_lot", "publicsuffix"]
 rustls-tls = ["rustls-ffi", "curl/rustls", "curl/static-curl"]
 rustls-tls-native-certs = ["rustls-tls", "data-encoding", "rustls-native-certs"]
