Move all of TLS into tls feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,16 +23,17 @@ default = ["http2", "native-tls", "static-curl", "text-decoding"]
 cookies = ["httpdate"]
 http2 = ["curl/http2"]
 json = ["serde", "serde_json"]
-native-tls = ["curl/ssl", "curl-sys/ssl"]
+native-tls = ["tls", "curl/ssl", "curl-sys/ssl"]
 nightly = []
 online-tests = []
 psl = ["httpdate", "parking_lot", "publicsuffix"]
-rustls-tls = ["rustls-ffi", "curl/rustls", "curl/static-curl"]
+rustls-tls = ["rustls-ffi", "tls", "curl/rustls", "curl/static-curl"]
 rustls-tls-native-certs = ["rustls-tls", "data-encoding", "rustls-native-certs"]
 spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
-static-ssl = ["curl/static-ssl"]
+static-ssl = ["curl/static-ssl"] # todo
 text-decoding = ["encoding_rs", "mime"]
+tls = []
 unstable-interceptors = []
 
 [dependencies]
