Tweak rustls-native-certs conditional compilation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ native-tls = ["tls", "curl/ssl", "curl-sys/ssl"]
 nightly = []
 online-tests = []
 psl = ["httpdate", "parking_lot", "publicsuffix"]
-rustls-tls = ["rustls-ffi", "tls", "curl/rustls", "curl/static-curl"]
+rustls-tls = ["rustls-ffi", "static-curl", "tls", "curl/rustls"]
 rustls-tls-native-certs = ["rustls-tls", "data-encoding", "rustls-native-certs"]
 spnego = ["curl-sys/spnego"]
 static-curl = ["curl/static-curl"]
