--- a/.github/workflows/psl-update.yml
+++ b/.github/workflows/psl-update.yml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: |
-          echo "::set-output name=old-sha::$(md5sum src/cookies/psl/list/public_suffix_list.dat | cut -d " " -f 1)"
+          echo "::set-output name=old-sha::$(sha256sum src/cookies/psl/list/public_suffix_list.dat | cut -d " " -f 1)"
           curl -o src/cookies/psl/list/public_suffix_list.dat https://publicsuffix.org/list/public_suffix_list.dat
-          echo "::set-output name=new-sha::$(md5sum src/cookies/psl/list/public_suffix_list.dat | cut -d " " -f 1)"
+          echo "::set-output name=new-sha::$(sha256sum src/cookies/psl/list/public_suffix_list.dat | cut -d " " -f 1)"
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v3
